create Edit Todo component

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@
 
 .User .logo img {
   width: 50px;
+  border-radius: 50%;
   border: 1px solid #000;
 }
 
@@ -55,6 +56,7 @@
   display: flex;
   justify-content: flex-end;
 }
+
 /* Modal */
 .Modal {
   position: fixed;
@@ -63,13 +65,13 @@
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.8);
+  z-index: 99;
 }
 .Modal .container {
   position: absolute;
   top: 25%;
   left: 50%;
   transform: translate(-50%, -25%);
-  background: white;
 }
 /* AddNewTodo */
 .AddNewTodo {
@@ -96,84 +98,84 @@
   transition: all 300ms ease;
 }
 /* AddNewTodo form */
-.AddNewTodo form {
-    padding: 1rem 1rem calc(1rem + 40px) 1rem;
-    width: 500px;
-    background: white;
-    border-radius: 4px;
-  }
-  .AddNewTodo form .text input {
-    padding: 1rem;
-    width: 100%;
-    margin-bottom: 0.5rem;
-    border: none;
-    font-size: 1.2rem;
-  }
-  .AddNewTodo form .text input:focus {
-    outline: none;
-    border-bottom: 1px solid #0080ff;
-  }
-  .AddNewTodo form .remind {
-    display: flex;
-    align-items: center;
-    padding: 0.5rem;
-  }
-  .AddNewTodo form p {
-    margin-left: 10px;
-  }
-  .AddNewTodo form .title {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-  }
-  .AddNewTodo form .pick-day {
-    padding: 1.5rem 1.5rem 0 1.5rem;
-  }
-  .AddNewTodo form .pick-time {
-    padding: 1.5rem;
-  }
-  .AddNewTodo form .pick-project {
-    padding: 0.5rem;
-  }
-  .AddNewTodo form .pick-project .projects {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 1rem 1rem 0 1rem;
-  }
-  .AddNewTodo form .pick-project .projects .project {
-    border: 1px solid #0080ff;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 5px;
-    cursor: pointer;
-  }
-  .AddNewTodo form .pick-project .projects .active {
-    background: #0080ff;
-    color: white;
-  }
-  .AddNewTodo form .cancel {
-    position: absolute;
-    top: 0;
-    right: 5px;
-    cursor: pointer;
-  }
-  .AddNewTodo form .confirm {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-  }
-  .AddNewTodo form .confirm button {
-    width: 100%;
-    height: 40px;
-    background: #0080ff;
-    color: white;
-    font-size: 1.1rem;
-    border: none;
-    border-radius: 0 0 4px 4px;
-    cursor: pointer;
-  }
-  /* Calendar */
+.TodoForm {
+  padding: 1rem 1rem calc(1rem + 40px) 1rem;
+  width: 100%;
+  background: white;
+  border-radius: 4px;
+}
+.TodoForm .text input {
+  padding: 1rem;
+  width: 100%;
+  margin-bottom: 0.5rem;
+  border: none;
+  font-size: 1.2rem;
+}
+.TodoForm .text input:focus {
+  outline: none;
+  border-bottom: 1px solid #0080ff;
+}
+.TodoForm .remind {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+}
+.TodoForm p {
+  margin-left: 10px;
+}
+.TodoForm .title {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+.TodoForm .pick-day {
+  padding: 1.5rem 1.5rem 0 1.5rem;
+}
+.TodoForm .pick-time {
+  padding: 1.5rem;
+}
+.TodoForm .pick-project {
+  padding: 0.5rem;
+}
+.TodoForm .pick-project .projects {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 1rem 1rem 0 1rem;
+}
+.TodoForm .pick-project .projects .project {
+  border: 1px solid #0080ff;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px;
+  cursor: pointer;
+}
+.TodoForm .pick-project .projects .active {
+  background: #0080ff;
+  color: white;
+}
+.TodoForm .cancel {
+  position: absolute;
+  top: 0;
+  right: 5px;
+  cursor: pointer;
+}
+.TodoForm .confirm {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.TodoForm .confirm button {
+  width: 100%;
+  height: 40px;
+  background: #0080ff;
+  color: white;
+  font-size: 1.1rem;
+  border: none;
+  border-radius: 0 0 4px 4px;
+  cursor: pointer;
+}
+/* Calendar */
 .Calendar {
   padding: 1rem;
   border-bottom: 1px solid #ebebeb;
@@ -214,6 +216,7 @@
   font-size: 1rem;
   cursor: pointer;
 }
+
 /* Projects */
 .Projects {
   padding: 1rem;
@@ -306,6 +309,7 @@
 .Project .btns .edit-delete span.delete:hover {
   background: #ffacac;
 }
+
 /* AddNewProject */
 .AddNewProject .add-button span {
   margin-right: 5px;
@@ -352,6 +356,7 @@
 .ProjectForm button:hover {
   filter: brightness(1.1);
 }
+
 /* Todos */
 .Todos {
   width: 450px;
@@ -412,4 +417,27 @@
 }
 .Todo .todo-container .add-to-next-day {
   margin-right: 10px;
+}
+/* EditTodo */
+.EditTodo {
+  position: absolute;
+  bottom: 40px;
+  left: calc(40px + 450px + 40px);
+
+  background-color: white;
+
+  height: 80%;
+  width: 450px;
+
+  border-radius: 4px;
+  opacity: 0.9;
+}
+.EditTodo .header {
+  margin: 1rem 0.5rem;
+
+  font-size: 1.2rem;
+  font-weight: bold;
+
+  padding-bottom: 2px;
+  border-bottom: 1px solid #eeeeee;
 }
